--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,11 @@ main
     padding: 1rem;
     background-color: var(--Bright_Yellow);
 }
-
+.subscription__button a
+{
+    text-decoration: none;
+    color:inherit
+}
 .subscription__button:hover
 {
 
